--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_HUB_Lokesh }}/node-ci-cd-demo:latest
+          tags: ${{ secrets.Lokesh }}/node-ci-cd-demo:latest
