--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^29.x.x"
+    "jest": "^29.7.0"
   },
   "keywords": [],
   "author": "",
