--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
             ${{ runner.os }}-node-
 
       - run: npm install
-      - run: npm test
+      - run: npx jest --passWithNoTests
+
 
   build-and-push:
     needs: test
